--- a/app/src/main/res/layout/music_list.xml
+++ b/app/src/main/res/layout/music_list.xml
@@ -4,7 +4,7 @@
     android:background="@color/colorAccent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/locationTextView"
+        android:id="@+id/songTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -17,7 +17,7 @@
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/locationTextView"
+        android:layout_below="@+id/songTextView"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="33dp"
