--- a/app/src/main/res/layout/activity_music_list.xml
+++ b/app/src/main/res/layout/activity_music_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MusicListActivity">
+    tools:context=".ui.MusicListActivity">
     <TextView
         android:id="@+id/songTextView"
         android:layout_width="wrap_content"
