ui classes and adapters coming up

--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MusicListActivity">
+    tools:context=".ui.ArticleListActivity">
     <TextView
         android:id="@+id/songTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="296dp"
-        android:text="Song: " />
+        android:layout_marginEnd="296dp" />
 
     <ListView
         android:id="@+id/listView"
