--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -4,12 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="130dp"
-        android:layout_height="100dp"
-        android:id="@+id/articleImageView"
-        android:src="@drawable/news"
-        android:scaleType="centerCrop"/>
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -18,19 +13,26 @@
         android:layout_height="match_parent"
         android:padding="10dp">
 
+        <ImageView
+            android:id="@+id/articleImageView"
+            android:layout_width="390dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/news" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/articleNameTextView"
+            android:layout_width="391dp"
+            android:layout_height="35dp"
+            android:text="Article Title "
+            android:textColor="@color/colorPrimary"
             android:textSize="20dp"
-            android:textStyle="bold"
-            android:text="Article Title"
-            android:textColor="@color/colorPrimary"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/descriptionTextView"
-            android:layout_width="269dp"
-            android:layout_height="wrap_content"
+            android:layout_width="391dp"
+            android:layout_height="45dp"
             android:layout_below="@+id/articleNameTextView"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
