change the layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/background" />
-
+        android:src="@drawable/back" />
 
 
     <TextView
@@ -20,9 +19,9 @@
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="20sp"
-        android:fontFamily="monospace"
+        android:layout_marginTop="30dp"
+        android:fontFamily="casual"
         android:text="News"
         android:textSize="40sp"
         android:textStyle="bold" />
@@ -34,7 +33,7 @@
         android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"
         android:background="@color/colorTextIcons"
-        android:hint="ENTER NEWS TO SEARCH"
+        android:hint="Get trending news"
         android:padding="5dp" />
 
 
@@ -46,7 +45,7 @@
         android:layout_centerHorizontal="true"
         android:textColor="@color/colorTextIcons"
         android:background="@color/colorAccent"
-        android:text="Get Artists" />
+        android:text="GET NEWS" />
 
 
 </RelativeLayout>
