--- a/app/src/main/res/layout/fragment_article_details.xml
+++ b/app/src/main/res/layout/fragment_article_details.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary">
+        android:background="#33B5e5">
 
     <ImageView
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:text="Title"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/my_purple"
             android:textSize="20sp"
             android:textStyle="bold" />
 
