--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -13,12 +13,28 @@
         android:layout_height="match_parent"
         android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/articleImageView"
-            android:layout_width="390dp"
-            android:layout_height="400dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/news" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/articleImageView"
+                android:layout_width="390dp"
+                android:layout_height="400dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/news" />
+
+            <ImageView
+                android:id="@+id/dragIcon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignLeft="@id/articleImageView"
+                android:layout_alignBottom="@id/articleImageView"
+                android:gravity="bottom|left"
+                android:src="@drawable/baseline_reorder_white_24"/>
+
+        </RelativeLayout>
+
+
 
         <TextView
             android:id="@+id/articleNameTextView"
