--- a/app/src/main/res/layout/fragment_article_details.xml
+++ b/app/src/main/res/layout/fragment_article_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,9 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:paddingTop="20dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:drawablePadding="4dp"
         android:paddingBottom="20dp">
 
         <TextView
@@ -50,6 +49,16 @@
             android:layout_alignParentStart="true"
             android:textColor="@color/colorSecondaryText"
             android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/websiteTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_below="@+id/articleAuthorTextView"
+            android:text="View on Website"
+            android:textStyle="bold"
+            app:drawableLeftCompat="@drawable/baseline_exit_to_app_black_18dp" />
     </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -64,7 +73,18 @@
                 android:fontFamily="@font/allerta_stencil"
                 android:text="Brunch, American"
                 android:textColor="#ffff"/>
+
         </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View on Yelp"
+            android:drawablePadding="4dp"
+            android:textColor="@color/colorTextIcons"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="49dp"
+            android:gravity="center" />
     </LinearLayout>
 
 
