--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -24,7 +24,7 @@
             android:layout_width="391dp"
             android:layout_height="60dp"
             android:text="Article Title "
-            android:textColor="@color/colorPrimary"
+            android:textColor="#03A9F4"
             android:textSize="20dp"
             android:textStyle="bold" />
 
